<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.migalski.bbdcry.babydontcry.theQuize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <!--Question 001-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Question 1"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:textStyle="bold"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question001"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp"
                    android:id="@+id/Q1RadioButtonGroup" >

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question001_option1"
                        android:layout_weight="1"
                        android:id="@+id/Q1O1" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question001_option2"
                        android:layout_weight="1"
                        android:id="@+id/Q1O2" />

                </RadioGroup>


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--Question 002-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Question 2"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:textStyle="bold"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question002"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp"
                    android:id="@+id/Q2RadioButtonGroup" >

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question002_option1"
                        android:layout_weight="1"
                        android:id="@+id/Q2O1" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question002_option2"
                        android:layout_marginHorizontal="8dp"
                        android:layout_weight="1"
                        android:id="@+id/Q2O2" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question002_option3"

                        android:layout_weight="1"
                        android:id="@+id/Q2O3" />

                </RadioGroup>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--Question 003-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Question 3"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:textStyle="bold"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question003"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="numberSigned"
                    android:layout_margin="8dp"
                    android:focusedByDefault="false"
                    android:id="@+id/Q3AnswerField" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--Question 004-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Question 4"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:textStyle="bold"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question004"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp"
                    android:id="@+id/Q4RadioButtonGroup" >

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question004_option1"
                        android:layout_weight="1"
                        android:id="@+id/Q4O1" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question004_option2"
                        android:layout_weight="1"
                        android:id="@+id/Q4O2" />

                </RadioGroup>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--Question 005-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Question 5"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:textStyle="bold"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question005"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question005_option1"
                        android:layout_weight="1"
                        android:id="@+id/Q5O1"/>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question005_option2"
                        android:layout_marginHorizontal="8dp"
                        android:layout_weight="1"
                        android:id="@+id/Q5O2"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question005_option3"
                        android:layout_weight="1"
                        android:id="@+id/Q5O3"/>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question005_option4"
                        android:layout_marginHorizontal="8dp"
                        android:layout_weight="1"
                        android:id="@+id/Q5O4"/>

                </LinearLayout>





            </LinearLayout>

        </android.support.v7.widget.CardView>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/submit"
            android:onClick="submit"/>

    </LinearLayout>

</ScrollView>
